--- a/Myblog-vue/index.html
+++ b/Myblog-vue/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html style="height: 100%;width: 100%;">
 
 <head>
   <meta charset="utf-8">
@@ -8,7 +8,7 @@
   <title>myblog-vue</title>
 </head>
 
-<body>
+<body style="height: 100%;width: 100%;">
   <div id="app"></div>
   <!-- built files will be auto injected -->
 </body>
